# zammad-ticket-fetcher

./: .env example  .gitignore  pyproject.toml
app/: app_logger.py  main.py  schemas.py  settings.py
app/services/: zammad_client.py
app/utils/: csv_writer.py
